[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/select_level_ui.gd" type="Script" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=3]

[node name="select_level_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="scroll_container" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 136.0

[node name="flow_container" type="HFlowContainer" parent="scroll_container"]

[node name="go_back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -29.0
margin_right = 20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 3 )
text = "Назад"

[connection signal="pressed" from="go_back" to="." method="_on_go_back_pressed"]
